[gd_scene load_steps=9 format=2]

[ext_resource path="res://ASSETS/Hazards/MoltenMetalSmall.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/Art/Molten Metal.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/Audio/deathNoises/sizzleShort.mp3" type="AudioStream" id=3]
[ext_resource path="res://ASSETS/Audio/ambientNoises/slurpSound.mp3" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "MetalMove"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 4, 1 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 60.2353, 19.3125 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 72.353, 17 )

[node name="MoltenMetalSmall" type="Node2D"]
scale = Vector2( 0.85, 1 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 0.8 )
texture = ExtResource( 2 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/MetalMove = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="DeathArea2D" type="Area2D" parent="."]
scale = Vector2( 1, 0.8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea2D"]
position = Vector2( -4.76837e-07, 57.5 )
scale = Vector2( 1, 0.8 )
shape = SubResource( 3 )

[node name="HotDripWide" type="CPUParticles2D" parent="."]
position = Vector2( 0, 128 )
amount = 1
lifetime = 2.2
emission_shape = 2
emission_rect_extents = Vector2( 72, 1 )
scale_amount = 1.5
scale_amount_random = 0.72
color = Color( 1, 0.639216, 0.0196078, 1 )

[node name="HotDripNarrow" type="CPUParticles2D" parent="."]
position = Vector2( 0, 128 )
amount = 3
lifetime = 4.15
emission_shape = 2
emission_rect_extents = Vector2( 20, 1 )
gravity = Vector2( 0, 30 )
scale_amount = 2.3
scale_amount_random = 1.0
color = Color( 1, 0.352941, 0.0313726, 1 )

[node name="SlowArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlowArea2D"]
position = Vector2( 0, -47 )
scale = Vector2( 1, 1 )
shape = SubResource( 4 )

[node name="MoltenSizzle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 2.0
pitch_scale = 1.3

[node name="RobertDrinkLava" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 3.354

[connection signal="body_entered" from="DeathArea2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="SlowArea2D" to="." method="_on_SlowArea2D_body_entered"]
[connection signal="finished" from="MoltenSizzle" to="." method="_on_MoltenSizzle_finished"]
[connection signal="finished" from="RobertDrinkLava" to="." method="_on_RobertDrinkLava_finished"]
